--- a/ondemand/apps/Matlab/local/ql_matlab_dev.yml
+++ b/ondemand/apps/Matlab/local/ql_matlab_dev.yml
@@ -7,10 +7,10 @@ tile:
     8 hours job run time
     Cannon cluster
 attributes:
+  desktop: "xfce"
   bc_queue: "test"
   bc_account: ""
-  bc_num_slots: "1"
-  bc_num_hours: "1"
+  bc_num_slots: null
   custom_memory_per_node: "8"
   custom_num_cores: "1"
   custom_num_gpus: "0"
@@ -19,4 +19,4 @@ attributes:
   bc_email_on_started: "0"
   custom_reservation: ""
   bc_vnc_resolution: "1024x768"
-  matlab_version: "matlab/R2021a-fasrc01"
+  matlab_version: "matlab/R2022b-fasrc01"
