--- a/ondemand/apps/RStudioServer/local/ql_rstudio_dev.yml
+++ b/ondemand/apps/RStudioServer/local/ql_rstudio_dev.yml
@@ -8,18 +8,15 @@ tile:
     8 hours job run time
     Cannon cluster
 attributes:
+  modules: ""
   bc_queue: "test"
   bc_account: ""
-  bc_num_slots: "1"
-  bc_num_hours: "1"
   custom_memory_per_node: "4"
   custom_num_cores: "2"
   custom_num_gpus: "0"
   custom_time: "08:00:00"
-  envscript: ""
   custom_email_address: ""
   bc_email_on_started: "0"
   custom_reservation: ""
-  r_version: "R/4.1.0-fasrc01"
-  rlibs: "~/apps/R_4.1.0_fasrc01"
+  r_version: "/n/singularity_images/informatics/ifxrstudio/ifxrstudio:RELEASE_3_16.sif"
   custom_vanillaconf: "1"
