--- a/ondemand/apps/RemoteDesktop/local/ql_remotedesktop_dev.yml
+++ b/ondemand/apps/RemoteDesktop/local/ql_remotedesktop_dev.yml
@@ -8,21 +8,20 @@ tile:
     8 hours job run time
     Cannon cluster
 attributes:
+  bc_vnc_idle: 0
+  desktop: "myxfce"
+  node_type: null
   bc_queue: "test"
   bc_account: ""
-  bc_num_slots: "1"
-  bc_num_hours: "1"
+  bc_num_slots: null
+  bc_num_hours: null
   custom_memory_per_node: "4"
   custom_num_cores: "2"
   custom_num_gpus: "0"
   custom_time: "08:00:00"
-  envscript: ""
   custom_email_address: ""
   bc_email_on_started: "0"
   custom_reservation: ""
   bc_vnc_resolution: "1024x768"
   custom_desktop: "1"
-  matlab_version: "NULL"
-  rstudio_version: "rstudio/1.1.453-fasrc01"
-  r_version: "R/4.1.0-fasrc01"
-  rlibs: "~/apps/R_4.1.0_fasrc01"
+  extra_slurm: ""
