--- a/ondemand/apps/SAS/local/ql_sas_dev.yml
+++ b/ondemand/apps/SAS/local/ql_sas_dev.yml
@@ -7,15 +7,14 @@ tile:
     8 hours job run time
     Cannon cluster
 attributes:
+  desktop: "xfce"
   bc_queue: "test"
   bc_account: ""
-  bc_num_slots: "1"
-  bc_num_hours: "1"
+  bc_num_slots: null
   custom_memory_per_node: "4"
   custom_num_cores: "1"
   custom_num_gpus: "0"
   custom_time: "08:00:00"
-  envscript: ""
   custom_email_address: ""
   bc_email_on_started: "0"
   custom_reservation: ""
