--- a/ondemand/apps/Stata/form.yml
+++ b/ondemand/apps/Stata/form.yml
@@ -8,23 +8,33 @@ attributes:
     value: "1024x768"
     required: true
   bc_account:
-    help: "Only relevant if you have multiple slurm accounts. It can be left blank otherwise"
+    help: |
+      *sbatch -A, --account=\<account\>*
+
+      Leave blank if you do not have multiple Slurm accounts
   custom_time:
     label: "Allocated Time (expressed in MM , or HH:MM:SS , or DD-HH:MM). Maximum for this partition is 7 days"
     value: "04:00:00"
     widget: text_field
+    help: |
+      *sbatch -t, --time=\<time\>*
   bc_queue:
     value: "shared"
+    help: |
+      *sbatch -p, --partition=\<partition_names\>*
+
+      [Slurm partition](https://www.rc.fas.harvard.edu/resources/running-jobs/#Slurm_partitions) name (e.g., **shared** ), or comma-separated list of partition names (e.g., **shared,test** )
   custom_email_address:
-    label: email for status notification
+    label: Email address for status notification
     widget: text_field
   custom_memory_per_node:
     label: Memory Allocation in GB
-    value: 4
+    value: 8
     min:   4
     step:  1
-    max:   1500
     widget: number_field
+    help: |
+      *sbatch --mem=\<size\>G*
   custom_num_cores:
     label: Number of cores
     value: 1
@@ -33,6 +43,8 @@ attributes:
     max:   64
     widget: number_field
     help: "Number of Cpus to allocate"
+    help: |
+      *sbatch -c, --cpus-per-task=\<ncpus\>*
   custom_num_gpus:
     label: Number of GPUs
     value: 0
@@ -41,17 +53,22 @@ attributes:
     max:   8
     widget: number_field
     help: "Number of GPUs to allocate. Available only on GPU enabled partitions"
+    help: |
+      *sbatch --gres=gpu:\<ngpus\>*
   custom_reservation:
     label: Reservation
     widget: text_field
+    help: |
+      *sbatch --reservation=\<name\>*
+
+      Leave blank if you do not have a Slurm reservation
   stata_version:
     widget: select
     label: "Stata version"
+    help: |
+      Loads the [module](https://docs.rc.fas.harvard.edu/kb/modules-intro/) for the requested version
     options:
       - [ "Stata 17",  "stata/17.0-fasrc01" ]
-      - [ "Stata 16",  "stata/16.0-fasrc01" ]
-      - [ "Stata 15",  "stata/15.0-fasrc01" ]
-      - [ "Stata 14",  "stata/14.0-fasrc01" ]
 
 form:
   - desktop
