--- a/ondemand/apps/Stata/manifest.yml
+++ b/ondemand/apps/Stata/manifest.yml
@@ -1,7 +1,7 @@
 ---
 name: Stata
 category: Interactive Apps
-subcategory: GUIs
+subcategory: Desktop Apps
 role: batch_connect
 description: |
   This app will launch [Stata] with GUI on [FAS-RC Cluster].
