--- a/ondemand/docker/env-files/Dockerfile.env.ondemand
+++ b/ondemand/docker/env-files/Dockerfile.env.ondemand
@@ -16,7 +16,7 @@ RUN dnf install -y epel-release && \
 
 RUN mkdir -p /etc/ood/config/tls
 COPY ./apache/sid_development.crt ./apache/sid_development.key /etc/ood/config/tls/
-COPY ./docker/ood_portal.yml ./docker/nginx_stage.yml /etc/ood/config/
+COPY ./docker/env-files/ood_portal.yml ./docker/nginx_stage.yml /etc/ood/config/
 RUN rm -f /etc/httpd/conf.d/* && \
     /opt/ood/ood-portal-generator/sbin/update_ood_portal && \
     systemctl enable httpd
@@ -27,5 +27,5 @@ RUN groupadd -g $OOD_GID ood || : && \
     echo -n "ood" | passwd --stdin ood && \
     htdbm -bc /etc/httpd/.htpasswd.dbm ood ood
 
-COPY ./docker/launch-httpd /usr/local/bin/
+COPY ./docker/env-files/launch-httpd /usr/local/bin/
 CMD ["/usr/local/bin/launch-httpd"]
