feat(ondemand): fixed docker environment for OnDemandv3.x for CentOS7

--- a/ondemand/Makefile
+++ b/ondemand/Makefile
@@ -9,9 +9,9 @@ OOD_GID := $(shell id -g)
 OOD_TAG := 3.0.1-1.el7
 SLURM_TAG := slurm-21-08-6-1
 # LATEST SLURM VERSION TO WORK WITH CURRENT CONFIGURATION: slurm-21-08-8-2
-SID_SLURM_IMAGE := hmdc/sid-slurm:$(SLURM_TAG)
-SID_ONDEMAND_IMAGE := hmdc/sid-ood:$(SLURM_TAG)-ood-$(OOD_TAG)
-ONDEMAND_ENV_IMAGE := ondemand_env:$(SLURM_TAG)
+SID_SLURM_IMAGE := hmdc/sid-slurm:v3-$(SLURM_TAG)
+SID_ONDEMAND_IMAGE := hmdc/sid-ood:v3-$(SLURM_TAG)-ood-$(OOD_TAG)
+ONDEMAND_ENV_IMAGE := ondemand_env:v3-$(SLURM_TAG)
 
 ENV := env SLURM_TAG=$(SLURM_TAG) SID_SLURM_IMAGE=$(SID_SLURM_IMAGE) SID_ONDEMAND_IMAGE=$(SID_ONDEMAND_IMAGE) OOD_UID=$(OOD_UID) OOD_GID=$(OOD_GID)
 
