--- a/ondemand/ondemand.d/fasrc.yml
+++ b/ondemand/ondemand.d/fasrc.yml
@@ -3,7 +3,7 @@ disable_dashboard_logo: false
 show_all_apps_link: false
 
 show_all_apps_link: false
-cancel_session_enabled: false
+cancel_session_enabled: true
 navbar_type: dark
 dashboard_header_img_logo: "/public/images/fasrc_logo.png"
 brand_bg_color: "rgb(157,47,60)"
