--- a/ondemand/ondemand.d/fasrc.yml
+++ b/ondemand/ondemand.d/fasrc.yml
@@ -5,7 +5,7 @@ show_all_apps_link: false
 show_all_apps_link: false
 cancel_session_enabled: true
 navbar_type: dark
-dashboard_header_img_logo: "/public/images/fasrc_logo.png"
+dashboard_header_img_logo: "/public/static/images/fasrc_logo.png"
 brand_bg_color: "rgb(157,47,60)"
 brand_link_active_bg_color: "rgb(59, 61, 63)"
 disable_dashboard_welcome_message: true
@@ -39,7 +39,7 @@ help_menu:
   - group: "Interface"
   - title: "FASRC"
     profile: "fasrc"
-    icon: "/public/images/fasrc_logo.jpg"
+    icon: "/public/static/images/fasrc_logo.jpg"
   - title: "Sid"
     profile: "sid"
-    icon: "/public/images/sid_logo.png"
+    icon: "/public/static/images/sid_logo.png"
