--- a/ondemand/ondemand.d/sid.yml
+++ b/ondemand/ondemand.d/sid.yml
@@ -4,12 +4,12 @@ profiles:
     announcement_path: "/etc/ood/config/announcement.sid.d/"
 
     navbar_type: default
-    dashboard_header_img_logo: "/public/images/sid_logo.png"
+    dashboard_header_img_logo: "/public/static/images/sid_logo.png"
     brand_bg_color: "#F0F0F0"
     brand_link_active_bg_color: "#3B3D3F"
     disable_dashboard_welcome_message: true
-    dashboard_logo: "/public/images/sid_logo.png"
-    custom_css_files: ["/css/sid.css"]
+    dashboard_logo: "/public/static/images/sid_logo.png"
+    custom_css_files: ["static/css/sid.css"]
 
     pinned_apps_group_by:
     pinned_apps: ["*/ql_*"]
