feat(ondemand): fixed quick launchers to work on FASSE environment for V3.x

--- a/ondemand/ondemand.d.local/launchers/ql_jupyter_dev.yml
+++ b/ondemand/ondemand.d.local/launchers/ql_jupyter_dev.yml
@@ -1,22 +1,24 @@
 ---
-token: "sys/SAS"
-order: 50
+token: "sys/Jupyter/main"
+order: 30
 tile:
-  title: "Run SAS"
+  title: "Run Jupyter notebook / Jupyterlab"
   sub_caption: |
-    1 CPU core and 4GB RAM
+    1 CPU core and 8GB RAM
     8 hours job run time
     Cannon cluster
 attributes:
-  desktop: "xfce"
   bc_queue: "test"
   bc_account: ""
-  bc_num_slots: null
-  custom_memory_per_node: "4"
+  custom_memory_per_node: "8"
   custom_num_cores: "1"
   custom_num_gpus: "0"
   custom_time: "08:00:00"
+  envscript: ""
+  modules: ""
+  jupyterlab_switch: "1"
   custom_email_address: ""
   bc_email_on_started: "0"
   custom_reservation: ""
-  bc_vnc_resolution: "1024x768"
+  extra_slurm: ""
+  working_folder: ""
