--- a/ondemand/ondemand.d.local/launchers/ql_matlab_dev.yml
+++ b/ondemand/ondemand.d.local/launchers/ql_matlab_dev.yml
@@ -1,10 +1,10 @@
 ---
-token: "sys/SAS"
-order: 50
+token: "sys/Matlab/main"
+order: 40
 tile:
-  title: "Run SAS"
+  title: "Run Matlab"
   sub_caption: |
-    1 CPU core and 4GB RAM
+    1 CPU core and 8GB RAM
     8 hours job run time
     Cannon cluster
 attributes:
@@ -12,7 +12,7 @@ attributes:
   bc_queue: "test"
   bc_account: ""
   bc_num_slots: null
-  custom_memory_per_node: "4"
+  custom_memory_per_node: "8"
   custom_num_cores: "1"
   custom_num_gpus: "0"
   custom_time: "08:00:00"
@@ -20,3 +20,4 @@ attributes:
   bc_email_on_started: "0"
   custom_reservation: ""
   bc_vnc_resolution: "1024x768"
+  matlab_version: "matlab/R2022b-fasrc01"
