--- a/ondemand/ondemand.d.local/fasse.yml
+++ b/ondemand/ondemand.d.local/fasse.yml
@@ -5,21 +5,31 @@ show_all_apps_link: false
 show_all_apps_link: false
 cancel_session_enabled: true
 navbar_type: dark
+# dashboard_title property does not work yet
+# It requires a new change to the OnDemand Puppet Module. PR raised. 
+dashboard_title: FASSE
 dashboard_header_img_logo: "/public/static/images/fasrc_logo.png"
-brand_bg_color: "<%= @ood_bg_color %>"
-brand_link_active_bg_color: "<%= @ood_active_bg_color %>"
+brand_bg_color: "rgb(137,160,180)"
+brand_link_active_bg_color: "rgb(0,0,0)"
+
 disable_dashboard_welcome_message: true
 
 pinned_apps_group_by: "category"
 pinned_apps:
-  - sys/Jupyter
-  - sys/Matlab
-  - sys/RStudioServer
-  - sys/RemoteDesktop
-  - sys/SAS
-  - sys/Stata
+  - sys/Jupyter/main
+  - sys/Matlab/main
+  - sys/RStudioServer/main
+  - sys/RemoteDesktop/main
+  - sys/SAS/main
+  - sys/Stata/main
 
-nav_categories: ["Clusters", "Files", "Jobs", "Interactive Apps" ]
+nav_bar:
+  - "clusters"
+  - "files"
+  - "jobs"
+  - title: "Interactive Apps"
+    apps: "*"
+  - "sessions"
 
 dashboard_layout:
   rows:
@@ -31,8 +41,8 @@ dashboard_layout:
 
 help_menu:
   - group: "Interface"
-  - title: "FASRC"
-    profile: "fasrc"
+  - title: "FASSE"
+    profile: "fasse"
     icon: "/public/static/images/fasrc_logo.jpg"
   - title: "Sid"
     profile: "sid"
