--- a/ondemand/ondemand.d/fasrc.yml
+++ b/ondemand/ondemand.d/fasrc.yml
@@ -5,28 +5,24 @@ show_all_apps_link: false
 show_all_apps_link: false
 cancel_session_enabled: true
 navbar_type: dark
+# dashboard_title property does not work yet
+# It requires a new change to the OnDemand Puppet Module. PR raised. 
+dashboard_title: FASRC
 dashboard_header_img_logo: "/public/static/images/fasrc_logo.png"
-brand_bg_color: "<%= @ood_bg_color %>"
-brand_link_active_bg_color: "<%= @ood_active_bg_color %>"
-
+brand_bg_color: "rgb(157,47,60)"
+brand_link_active_bg_color: "rgb(59, 61, 63)"
 disable_dashboard_welcome_message: true
 
 pinned_apps_group_by: "category"
 pinned_apps:
-  - sys/Jupyter/main
-  - sys/Matlab/main
-  - sys/RStudioServer/main
-  - sys/RemoteDesktop/main
-  - sys/SAS/main
-  - sys/Stata/main
+  - sys/Jupyter
+  - sys/Matlab
+  - sys/RStudioServer
+  - sys/RemoteDesktop
+  - sys/SAS
+  - sys/Stata
 
-nav_bar:
-  - "clusters"
-  - "files"
-  - "jobs"
-  - title: "Interactive Apps"
-    apps: "*"
-  - "sessions"
+nav_categories: ["Clusters", "Files", "Jobs", "Interactive Apps" ]
 
 dashboard_layout:
   rows:
