--- a/ondemand/ondemand.d.local/sid.yml
+++ b/ondemand/ondemand.d.local/sid.yml
@@ -1,4 +1,7 @@
+group_based_profiles: false
 profiles:
+  ood:
+
   sid:
     show_all_apps_link: false
     announcement_path: "/etc/ood/config/announcement.sid.d/"
@@ -7,12 +10,12 @@ profiles:
     # dashboard_title property does not work yet
     # It requires a new change to the OnDemand Puppet Module. PR raised. 
     dashboard_title: Sid
-    dashboard_header_img_logo: "/public/static/images/sid_logo.png"
+    dashboard_header_img_logo: "/public/sid_logo.png"
     brand_bg_color: "#F0F0F0"
     brand_link_active_bg_color: "#3B3D3F"
     disable_dashboard_welcome_message: true
-    dashboard_logo: "/public/static/images/sid_logo.png"
-    custom_css_files: ["static/css/sid.css"]
+    dashboard_logo: "/public/sid_logo.png"
+    custom_css_files: ["sid.css"]
 
     pinned_apps_group_by:
     pinned_apps: ["*/ql_*"]
