--- a/ondemand/application/dashboard/views/widgets/sid/launchers/local_with_cluster.yml
+++ b/ondemand/application/dashboard/views/widgets/sid/launchers/local_with_cluster.yml
@@ -4,7 +4,7 @@ cluster: "dev-cluster"
 order: 1
 tile:
   title: "Run RStudio CLUSTER"
-  icon: "/public/static/images/rstudio_logo.png"
+  icon: "/public/rstudio_logo.png"
   sub_caption: |
     1 CPU cores and 4GB RAM
     1 hours job run time
