--- a/ondemand/application/dashboard/views/widgets/sid/launchers/ql_remotedesktop_dev.yml
+++ b/ondemand/application/dashboard/views/widgets/sid/launchers/ql_remotedesktop_dev.yml
@@ -3,7 +3,7 @@ token: "sys/RemoteDesktop"
 order: 20
 tile:
   title: "Run Remote Desktop"
-  icon: "/public/static/images/desktop_logo.svg"
+  icon: "/public/desktop_logo.svg"
   sub_caption: |
     2 CPU core and 4GB RAM
     8 hours job run time
