--- a/ondemand/apps/RemoteDesktop/local/ql_remotedesktop_dev.yml
+++ b/ondemand/apps/RemoteDesktop/local/ql_remotedesktop_dev.yml
@@ -2,7 +2,7 @@
 cluster: "dev-cluster"
 tile:
   title: "Run Remote Desktop"
-  icon: "/public/static/images/desktop_logo.svg"
+  icon: "/public/desktop_logo.svg"
   sub_caption: |
     2 CPU core and 4GB RAM
     8 hours job run time
