--- a/ondemand/ondemand.d.local/fasse.yml
+++ b/ondemand/ondemand.d.local/fasse.yml
@@ -8,7 +8,7 @@ navbar_type: dark
 # dashboard_title property does not work yet
 # It requires a new change to the OnDemand Puppet Module. PR raised. 
 dashboard_title: FASSE
-dashboard_header_img_logo: "/public/static/images/fasrc_logo.png"
+dashboard_header_img_logo: "/public/fasrc_logo.png"
 brand_bg_color: "rgb(137,160,180)"
 brand_link_active_bg_color: "rgb(0,0,0)"
 
@@ -43,7 +43,7 @@ help_menu:
   - group: "Interface"
   - title: "FASSE"
     profile: "fasse"
-    icon: "/public/static/images/fasrc_logo.jpg"
+    icon: "/public/fasrc_logo.jpg"
   - title: "Sid"
     profile: "sid"
-    icon: "/public/static/images/sid_logo.png"
+    icon: "/public/sid_logo.png"
