feat(ondemand): added proposal or support ticket template fix

--- a/ondemand/puppet/data/nodes/localhost.yaml
+++ b/ondemand/puppet/data/nodes/localhost.yaml
@@ -3,5 +3,12 @@ openondemand::confs:
     content_template: '/tmp/dashboard/files/ondemand.d/sid.yml'
   fasse:
     content_template: '/tmp/dashboard/files/ondemand.d/fasse.yml'
-  support_ticket:
-    content_template: '/tmp/dashboard/files/ondemand.d/support_ticket.yml.erb'
+  
+openondemand::pinned_apps: null
+openondemand::dashboard_layout: null
+openondemand::pinned_apps_group_by: null
+
+ood_support_ticket::rt_server: 'http://rt:34000' 
+ood_support_ticket::rt_queues: ['General', 'Internal:Logging']
+ood_support_ticket::rt_api_user: 'root'
+ood_support_ticket::rt_api_pass: 'password'
