feat(ondemand): reviewed and fixed OOD configuration for FASRC, FASSE, and Sid

--- a/ondemand/ondemand.d/fasrc.yml
+++ b/ondemand/ondemand.d/fasrc.yml
@@ -1,5 +1,5 @@
 host_based_profiles: false
-disable_dashboard_logo: false
+disable_dashboard_logo: true
 show_all_apps_link: false
 
 show_all_apps_link: false
